# PProgramming_MultithreadedImageProcessing

./: .gitignore  CHEATSHEET.md  CMakeLists.txt  INSTALL.md  LIBRARY.md  PRESENTATION_PLAN.md  QUICK_START.md  README.md  check_cuda_compatibility.sh  prime-run.sh  quick_start.sh  run_tests.sh  run_with_nvidia.sh
examples/: README.md  compile_example.sh  simple_example  simple_example.cu
include/: cuda_image_lib.h
src/: main.cu
src/core/: cuda_kernels.cu  cuda_utils.h  image_data.h  image_processor.cu  image_processor.h  parallel_processor.cu  parallel_processor.h
src/filters/: blur.cu  blur.h  cpu_filters.cpp  cpu_filters.h  grayscale.cu  grayscale.h  rotation.cu  rotation.h
src/utils/: batch_processor.cu  batch_processor.h  image_loader.cu  image_loader.h
tests/: test_blur.cu  test_grayscale.cu  test_parallel.cu  test_rotation.cu
web/: README_WEB.md  app.py  requirements.txt  start_server.sh
web/static/: script.js  style.css
web/templates/: index.html
